2005-10-12  Kouhei Sutou  <kou@cozmixng.org>

	* packages/cairo/ext/rb_cairo_context.c (cr_set_source_rgb):
	Re-implemented for backward compatibility.

	* samples/png.rb: Use Cairo::Context#set_source_rgba instead of
	Cairo::Context#set_source.

	* packages/cairo/ext/rb_cairo_surface.c
	(cr_image_surface_create_from_png_generic): Set class of the
	surface.

	* packages/cairo/ext/rb_cairo_context.c (cr_set_source_generic):
	Fixed wrong variable name.

2005-10-11  Kouhei Sutou  <kou@cozmixng.org>

	* packages/cairo/ext/rb_cairo_context.c: Provided
	Cairo::Context#set_soruce_rgba.
	(cr_arc_negative, cr_arc): cx -> xc and cy -> yc.

	* packages/cairo/ext: Extracted Ruby object -> enum type codes.

	* packages/cairo/ext/rb_cairo_pattern.c
	(cr_gradient_pattern_add_color_stop_rgba): Renamed from
	cr_gradient_pattern_add_color_stop.

2005-10-10  Øyvind Kolås  <pippin@gimp.org>

	* packages/cairo/ext/rb_cairo_pattern.c:
	(cr_gradient_pattern_add_color_stop): Make the code work when not
	passing the color as an array as well.

2005-10-11  Kouhei Sutou  <kou@cozmixng.org>

	* packages/cairo/ext/rb_cairo.c: Added cairo version info.

	* packages/cairo/lib/cairo.rb: Added bindings version info as
	  1.0.0-beta.

	* samples/canvas: Removed.
	
	* packages/cairo/ext/: Added CVS keywords.

	* packages/cairo/ext/rb_cairo_context.c: Renamed 'xform'.
	* packages/cairo/ext/rb_cairo_font_face.c: ditto.
	* packages/cairo/ext/rb_cairo_glyph.c: ditto.
	* packages/cairo/ext/rb_cairo_matrix.c: ditto.

	* packages/cairo/ext/rb_cairo_private.c: Changed prefix to
	  'rb_cairo__' from 'cr__'.
	* packages/cairo/ext/rb_cairo_matrix.c: ditto.
	* packages/cairo/ext/rb_cairo_context.c: ditto.
	* packages/cairo/ext/rb_cairo_private.h: ditto.

	* packages/cairo/ext/rb_cairo_glyph.c:
	  - Use Cairo::Glyph#initialize instead of Cairo::Glyph.new.
	  - Added Cairo::Glyph#to_s.

	* packages/cairo/ext/rb_cairo_font_extents.c:
	  - Removed Cairo::FontExtents.new.
	  - Added Cairo::FontExtents#to_s.
